# rusty-weather

./: .gitignore  Cargo.toml  README.md  deploy_rpi.sh
.github/workflows/: build_and_test_frontend.yaml  build_and_test_rust.yaml  create_raspberry_release.yml  rust.yml
backend/: Cargo.toml
backend/migrations/: 0001_settings_table.sql  0002_settings_table_populate.sql  0003_add_language_column_to_settings_table.sql
backend/src/: app_state.rs  config.rs  language.rs  main.rs
backend/src/handlers/: error.rs  mod.rs  settings.rs  weather.rs
backend/src/middlewares/: mod.rs
backend/src/settings/: error.rs  mod.rs  model.rs  sqlite_repository.rs
backend/src/weather/: error.rs  mod.rs  model.rs  open_weather_api.rs
deploy_raspberry_pi/: DockerfileBackend  DockerfileFrontend  README.md  docker-compose.yaml  frontend-nginx-config.conf  update.sh  upload.sh
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.test.tsx  App.tsx  Weather.tsx  WeatherStation.tsx  i18n.ts  index.tsx
frontend/src/api/: settings.ts  weather.ts
frontend/src/components/currentDayWeather/: CurrentDayWeather.css  CurrentDayWeather.tsx  CurrentWeatherC.tsx  CurrentWeatherCard.tsx  ForecastWeather.tsx
frontend/src/components/languageSelector/: LanguageSelector.tsx
frontend/src/components/navbar/: CityAndDate.tsx  Navbar.css  Navbar.tsx  NavbarClock.tsx  NavbarItem.tsx  NavbarRefreshSettingsButton.tsx  NavbarSettingsButton.tsx
frontend/src/components/redirectToSettings/: RedirectToSettings.css  RedirectToSettings.tsx
frontend/src/config/: SettingsContext.tsx  config.ts
frontend/src/model/: settings.ts  weather.ts
frontend/src/pages/: Forecast.tsx  ForecastPage.tsx  Settings.tsx  SettingsPage.css  SettingsPage.tsx  Weather.tsx  WeatherPage.tsx
frontend/src/settings/: settings.ts
frontend/src/utils/: dateAndTimeHelper.ts  iconHelper.tsx  languageHelper.ts  screenSize.ts
src/: main.rs
