[package]
name = "rusty-weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web framework
axum = "0.7.2"
tower-http = { version = "0.5.0", features = ["cors"] }

# Async runtime
tokio = { version = "1.34.0", features = ["full"] }

# Vendored OpenSSL (for cross-compilation purposes)
openssl = { version = "0.10.61", features = ["vendored"] }

[target.armv7-unknown-linux-gnueabihf]
# Build a static library
rustflags = [
    "-C", "target-feature=+crt-static",
    "-C", "link-arg=-no-pie",
]