[package]
name = "rusty-weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web framework
axum = "0.7.2"
tower-http = { version = "0.5.0", features = ["cors"] }

# Async runtime
tokio = { version = "1.34.0", features = ["full"] }

# Vendored OpenSSL (for cross-compilation purposes)
openssl = { version = "0.10.61", features = ["vendored"] }

# Serializer/Deserializer
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# HTTP Client
reqwest = { version = "0.11.22", features = ["json"] }

# Logs
log = "0.4.20"
env_logger = "0.10.1"

# Database management
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-native-tls"] }